@@ -5,8 +5,6 @@ import static org.springframework.data.jpa.repository.EntityGraph.EntityGraphTyp
 import java.security.SecureRandom;
 import java.time.ZonedDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import javax.annotation.Nullable;
 import javax.validation.constraints.NotNull;
@@ -321,7 +319,7 @@ public interface StudentExamRepository extends JpaRepository<StudentExam, Long> 
         // Add as many optional indices as numberOfOptionalExercises
         if (numberOfOptionalExercises > 0) {
             Collections.shuffle(optionalIndices);
-            indices = Stream.concat(indices.stream(), optionalIndices.stream().limit(numberOfOptionalExercises)).collect(Collectors.toList());
+            indices.addAll(optionalIndices.stream().limit(numberOfOptionalExercises).toList());
         }
 
         // Sort the indices to preserve the original order
